@@ -4,6 +4,7 @@ import com.example.server.dto.restaurant.*;
 import com.example.server.entity.MenuCategory;
 import com.example.server.entity.MenuItem;
 import com.example.server.entity.Restaurant;
+import com.example.server.exception.AppException;
 import com.example.server.exception.ResourceNotFoundException;
 import com.example.server.mapper.MenuMapper;
 import com.example.server.repository.MenuCategoryRepository;
@@ -11,11 +12,11 @@ import com.example.server.repository.MenuItemRepository;
 import com.example.server.repository.RestaurantRepository;
 import com.example.server.service.MenuService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,77 +34,99 @@ public class MenuServiceImpl implements MenuService {
     @Override
     public List<MenuCategoryResponse> getMenuCategories(Long restaurantId) {
         return menuCategoryRepository.findByRestaurantIdOrderBySortOrderAsc(restaurantId).stream()
+                .filter(c -> Boolean.FALSE.equals(c.getIsDeleted()))
                 .map(menuMapper::toCategoryResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
-    public MenuCategoryResponse addMenuCategory(Long restaurantId, String name) {
-        Restaurant restaurant = restaurantRepository.findById(restaurantId)
-                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_RESTAURANT, "id", restaurantId));
-        
+    public MenuCategoryResponse addMenuCategory(Long ownerId, Long restaurantId, String name) {
+        Restaurant restaurant = validateRestaurantOwnership(ownerId, restaurantId);
+
         MenuCategory category = new MenuCategory();
         category.setRestaurant(restaurant);
         category.setName(name);
         category.setSortOrder(0);
+        category.setIsDeleted(false);
         return menuMapper.toCategoryResponse(menuCategoryRepository.save(category));
     }
 
     @Override
     @Transactional
-    public MenuCategoryResponse updateMenuCategory(Long categoryId, String name) {
+    public MenuCategoryResponse updateMenuCategory(Long ownerId, Long categoryId, String name) {
         MenuCategory category = menuCategoryRepository.findById(categoryId)
                 .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_CATEGORY, "id", categoryId));
+
+        validateRestaurantOwnership(ownerId, category.getRestaurant().getId());
+
         category.setName(name);
         return menuMapper.toCategoryResponse(menuCategoryRepository.save(category));
     }
 
     @Override
     @Transactional
-    public void deleteMenuCategory(Long categoryId) {
-        if (!menuCategoryRepository.existsById(categoryId)) {
-            throw new ResourceNotFoundException("MenuCategory", "id", categoryId);
-        }
-        menuCategoryRepository.deleteById(categoryId);
+    public void deleteMenuCategory(Long ownerId, Long categoryId) {
+        MenuCategory category = menuCategoryRepository.findById(categoryId)
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_CATEGORY, "id", categoryId));
+
+        validateRestaurantOwnership(ownerId, category.getRestaurant().getId());
+
+        category.setIsDeleted(true);
+        menuCategoryRepository.save(category);
     }
 
     @Override
     @Transactional
-    public MenuItemResponse addMenuItem(Long restaurantId, Long categoryId, MenuItemRequest request) {
-        Restaurant restaurant = restaurantRepository.findById(restaurantId)
-                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_RESTAURANT, "id", restaurantId));
+    public MenuItemResponse addMenuItem(Long ownerId, Long restaurantId, Long categoryId, MenuItemRequest request) {
+        Restaurant restaurant = validateRestaurantOwnership(ownerId, restaurantId);
         MenuCategory category = menuCategoryRepository.findById(categoryId)
                 .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_CATEGORY, "id", categoryId));
+
+        if (!category.getRestaurant().getId().equals(restaurantId)) {
+            throw new AppException(HttpStatus.BAD_REQUEST, "Category does not belong to this restaurant",
+                    "INVALID_CATEGORY");
+        }
 
         MenuItem menuItem = menuMapper.toEntity(request);
         menuItem.setRestaurant(restaurant);
         menuItem.setCategory(category);
+        menuItem.setIsDeleted(false);
         return menuMapper.toItemResponse(menuItemRepository.save(menuItem));
     }
 
     @Override
     @Transactional
-    public MenuItemResponse updateMenuItem(Long itemId, MenuItemRequest request) {
+    public MenuItemResponse updateMenuItem(Long ownerId, Long itemId, MenuItemRequest request) {
         MenuItem menuItem = menuItemRepository.findById(itemId)
                 .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_ITEM, "id", itemId));
-        
+
+        validateRestaurantOwnership(ownerId, menuItem.getRestaurant().getId());
+
         menuMapper.updateEntity(menuItem, request);
-        
+
         if (request.getCategoryId() != null) {
             MenuCategory category = menuCategoryRepository.findById(request.getCategoryId())
                     .orElseThrow(() -> new ResourceNotFoundException("MenuCategory", "id", request.getCategoryId()));
+
+            if (!category.getRestaurant().getId().equals(menuItem.getRestaurant().getId())) {
+                throw new AppException(HttpStatus.BAD_REQUEST, "Category does not belong to this restaurant",
+                        "INVALID_CATEGORY");
+            }
             menuItem.setCategory(category);
         }
-        
+
         return menuMapper.toItemResponse(menuItemRepository.save(menuItem));
     }
 
     @Override
     @Transactional
-    public void deleteMenuItem(Long itemId) {
+    public void deleteMenuItem(Long ownerId, Long itemId) {
         MenuItem menuItem = menuItemRepository.findById(itemId)
                 .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_ITEM, "id", itemId));
+
+        validateRestaurantOwnership(ownerId, menuItem.getRestaurant().getId());
+
         menuItem.setIsDeleted(true);
         menuItemRepository.save(menuItem);
     }
@@ -112,6 +135,22 @@ public class MenuServiceImpl implements MenuService {
     public MenuItemResponse getMenuItem(Long id) {
         MenuItem menuItem = menuItemRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_ITEM, "id", id));
+
+        if (Boolean.TRUE.equals(menuItem.getIsDeleted())) {
+            throw new ResourceNotFoundException(RESOURCE_ITEM, "id", id);
+        }
+
         return menuMapper.toItemResponse(menuItem);
+    }
+
+    private Restaurant validateRestaurantOwnership(Long ownerId, Long restaurantId) {
+        Restaurant restaurant = restaurantRepository.findById(restaurantId)
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_RESTAURANT, "id", restaurantId));
+
+        if (!restaurant.getOwner().getId().equals(ownerId)) {
+            throw new AppException(HttpStatus.FORBIDDEN, "User does not own this restaurant",
+                    "UNAUTHORIZED_RESTAURANT_ACCESS");
+        }
+        return restaurant;
     }
 }
